--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "ext-xmlwriter": "*",
         "lib-libxml": ">=2.6.20",
         "nahid/jsonq": "^5.1",
-        "anik/loguzz": "^1.0"
+        "anik/loguzz": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5.15|^8.4|^9.0",
         "monolog/monolog": "^1.12|^2.0",
         "symfony/var-dumper": "^3.4",
-        "mockery/mockery": "^1.3"
+        "mockery/mockery": "^1.3",
+        "colinodell/psr-testlogger": "^1.2"
     },
     "license": "MIT",
     "authors": [
